# gaia-discovery

./: .env.local  .gitignore  .mcp_gaia.json  .mcp_gaia_lean.json  AGENTS.md  CLAUDE.md  Makefile  README.md  add_exploration_log.patch  add_final_log_save.py  add_log_init_to_run.py  add_logging_to_mcts.py  add_summary_generation.py  analyze_reasoning_depth.py  apply_ingest_fix.py  check_verify_status.py  ds_anthropic_proxy.py  env-deepseek.sh.example  final_summary.py  fix_callback_recursion.py  fix_datetime_import.py  fix_existing_graph.py  fix_existing_graph_v2.py  fix_graph_final.py  fix_graph_simple.py  fix_ingest.py  gd.toml.example  ingest_patch.py  monitor_fixed_v3.py  monitor_upstream.sh  pyproject.toml  run_clean_test.py  run_outcome_quick.py  run_outcome_test.py  run_riemann_60iter.py  run_riemann_60iter_fixed.py  run_riemann_bg.py  run_riemann_clean.py  run_riemann_final.py  run_riemann_fixed.py  (+13 more)
.claude/: .gitignore  settings.json
agents/: gaia-action-runner.md
clean_test_run/: graph.json
commands/: gaia-bp.md  gaia-dispatch.md  gaia-explore.md  gaia-ingest.md  gaia-inquiry.md  gaia-lkm-review.md  gaia-run-cycle.md  gaia-verify.md
docs/: USAGE.md
ears/: ears-state  ears-trace
projects/ppt2_dephasing/: AGENTS.md  CLAUDE.md  PROBLEM.md  PROGRESS.md  pyproject.toml  target.json
projects/ppt2_dephasing/.gaia/inquiry/: state.json
projects/ppt2_dephasing/discovery_ppt2_dephasing/: __init__.py
projects_v39/fs010_bf7d23f3/: AGENTS.md  CLAUDE.md  FINAL_ANSWER.md  PROBLEM.md  PROGRESS.md  SUCCESS.md  pyproject.toml  target.json
projects_v39/fs010_bf7d23f3/discovery_fs010_bf7d23f3/: __init__.py
projects_v39/fs010_bf7d23f3/runs/iter_20260508T170347/: belief_snapshot.json  review.json
projects_v39/fs010_bf7d23f3/runs/iter_20260508T170347/verify/: act_63bd405c2915.json  act_8ef7f5670cdb.json  act_9aa985d9cc18.json
projects_v39/fs010_bf7d23f3/runs/iter_20260508T174924/: belief_snapshot.json  review.json
projects_v39/fs010_bf7d23f3/runs/iter_20260508T174924/verify/: act_48377d45ee70.json  act_89ad7f7eae2b.json  act_97809190c915.json
projects_v39/fs010_bf7d23f3/runs/manual_bp/: belief_snapshot.json
projects_v39/fs010_bf7d23f3/task_results/: act_48377d45ee70.evidence.json  act_48377d45ee70.lean  act_48377d45ee70.md  act_63bd405c2915.evidence.json  act_63bd405c2915.lean  act_63bd405c2915.md  act_63bd405c2915.py  act_63bd405c2915.py.verdict.json  act_89ad7f7eae2b.evidence.json  act_89ad7f7eae2b.md  act_8ef7f5670cdb.evidence.json  act_8ef7f5670cdb.lean  act_8ef7f5670cdb.md  act_97809190c915.evidence.json  act_97809190c915.lean  act_97809190c915.md  act_9aa985d9cc18.evidence.json  act_9aa985d9cc18.md
projects_v39/fs010_bf7d23f3/task_results/_judge/: act_89ad7f7eae2b.judge.md
projects_v39/fs010_bf7d23f3/task_results/act_9aa985d9cc18_lean/: Josephson.lean  lake-manifest.json  lakefile.lean
projects_v39/fs010_bf7d23f3/task_results/act_9aa985d9cc18_lean/.lake/: lakefile.olean  lakefile.olean.trace
projects_v39/fs010_bf7d23f3/task_results/act_9aa985d9cc18_lean/Josephson/: Odes.lean
riemann_60iter_20260414_093500/: graph.json
schemas/: action_signal.schema.json  (+9 more)
templates/case_template/: .mcp.json  AGENTS.md  CLAUDE.md  PROBLEM.md  PROGRESS.md  USER_HINTS.md  pyproject.toml  target.json
templates/case_template/.gaia/inquiry/: state.json
templates/case_template/{{__PROJECT_IMPORT__}}/: __init__.py
(+747 files in other folders)
